--- a/src/main/webapp/WEB-INF/jsp/newOrder-mail-page.html
+++ b/src/main/webapp/WEB-INF/jsp/newOrder-mail-page.html
@@ -1,22 +1,22 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
+
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>JSP Page</title>
     </head>
     <body>
-        <div class="container" style="width: 80%;margin: auto;border: 1px solid grey;border-radius: 4px 4px;box-shadow: 5px 5px 5px grey;">
-            <div class="header" style="width: 80%">
+        <div class="container" style="width: 90%;margin: auto;border: 1px solid grey;border-radius: 4px 4px;box-shadow: 5px 5px 5px grey;">
+            <div class="header" style="width: 90%;margin: auto;">
                 <hr>
-                <img src="http://vhsneaker.xtgem.com/logomain.png" alt="" style="width: 50%;"><p class="tittle"style="width: 40%;float: left;font-size: 250%;
-                                                                                                 margin-left: 3%;font-family: serif;margin-top: 50px;">HÓA ĐƠN MUA HÀNG</p>
+                <img src="http://vhsneaker.xtgem.com/logomain.png" alt="" style="width: 50%;">
+                <p class="tittle" style="width: 40%;float: left;font-size: 250%;margin-left: 3%;font-family: serif;margin-top: 50px;">HÓA ĐƠN MUA HÀNG</p>
                 <hr>
                 <p>
                     <!--thisDate-->
                 </p>
                 <div class="clear" style="float: clear;"></div>
             </div>
-            <div class="body" style="width: 80%">
+            <div class="body" style="width: 90%;margin: auto">
                 <table style="width: 100%;">
                     <tr>
                         <td>Kính gửi</td>
@@ -99,7 +99,8 @@
                     </tr>
                 </table>
             </div>
-            <div class="footer" style="width: 80%;">
+            <div class="footer" style="width: 90%;margin: auto;">
+                <img src="cid:leftSideImage" alt="">
                 <hr>
                 <h2 style="color: green;text-align: center">vhSneaker chúc bạn có một ngày thật vui vẻ</h2>
             </div> 
